[package]
name = "webrtc-unreliable"
version = "0.5.2"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "UDP-like (unreliable, unordered) communication between Javascript/WebAssembly and native Rust via WebRTC"
repository = "https://github.com/kyren/webrtc-unreliable"
documentation = "https://docs.rs/webrtc-unreliable"
readme = "README.md"
keywords = ["rust", "webrtc"]
license = "MIT"

[env]
OPENSSL_LIB_DIR =  { value = "webrtc-unreliable\\openssl\\lib",  relative = true, force = false }
OPENSSL_INCLUDE_DIR = { value = "webrtc-unreliable\\openssl\\include", relative = true, force = false }
OPENSSL_STATIC_LIB_DIR = { value = "webrtc-unreliable\\openssl\\lib", relative = true, force = false }
OPENSSL_DIR = { value = "webrtc-unreliable\\openssl", relative = true, force = false }           
OPENSSL_STATIC = "1"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-io = "1.9.0"
byteorder = "1.4.3"
crc = "3.0.0"
serde_json = "1.0"
kanal = {version = "0.1.0-pre1", features = ["async"]}
futures-core = { version = "0.3.24" }
futures-util = { version = "0.3.24", features = ["sink"] }
futures = "0.3.24"
openssl = { version = "0.10.41" }
rand = "0.8.5"
socket2 = "0.4.7"
hashbrown = "0.12.3"
atone = "0.3.5"

[dev-dependencies]
clap = "3.0"
env_logger = "0.9"
futures = { version = "0.3" }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }

[build]
rustflags = ["-C", "target-feature=+crt-static"]