[package]
name = "unreliablertc"
version = "0.6.0"
authors = ["Hironichu <contact@ekko.pw>"]
edition = "2018"
description = "UDP-like (unreliable, unordered) communication between Javascript/WebAssembly and native Rust via WebRTC (Forked of webrtc-unreliable)"
repository = "https://github.com/hironichu/unreliablertc"
readme = "README.md"
keywords = ["rust", "webrtc"]
license = "MIT"

[env]
OPENSSL_LIB_DIR =  { value = "unreliablertc\\openssl\\lib",  relative = true, force = false }
OPENSSL_INCLUDE_DIR = { value = "unreliablertc\\openssl\\include", relative = true, force = false }
OPENSSL_STATIC_LIB_DIR = { value = "unreliablertc\\openssl\\lib", relative = true, force = false }
OPENSSL_DIR = { value = "unreliablertc\\openssl", relative = true, force = false }
OPENSSL_STATIC = "1"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-io = "1.12"
byteorder = "1.4.3"
crc = "3.0.0"
serde_json = "1.0"
futures-core = { version = "0.3.25" }
futures-util = { version = "0.3.25", features = ["sink"] }
futures = "0.3.24"
openssl = { version = "0.10.41" }
rand = "0.8.5"
socket2 = "0.5"
hashbrown = "0.13"
atone = "0.3.5"
flume = "0.10.14"

[dev-dependencies]
clap = "3.0"
env_logger = "0.10"
futures = { version = "0.3" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[build]
rustflags = ["-C", "target-feature=+crt-static"]